# leti_kursovaya

./: .gitignore  CMakeLists.txt  README.md  UpdateManager.cpp  UpdateManager.h  config.ini  main.cpp  resources.qrc
Controllers/: DriverController.cpp  DriverController.h  RaceController.cpp  RaceController.h  TeamController.cpp  TeamController.h
Entities/: Driver.cpp  Driver.h  Race.cpp  Race.h  Team.cpp  Team.h
Exceptions/: CustomExceptions.h
Models/: BaseListModel.h  DriversModel.cpp  DriversModel.h  RacesModel.h  TeamsModel.h
Tests/: test_models.cpp
View/: List.cpp  List.h  MainThemeVars.h  MainWindow.cpp  MainWindow.h  StackedWidget.h
View/DriversView/: AddDriversDialog.h  DriversCard.h  DriversDelegate.h  DriversView.cpp  DriversView.h
View/RacesView/: AddRaceDialog.h  RacesCard.h  RacesDelegate.h
View/TeamView/: AddTeamsDialog.h  TeamsCard.h  TeamsDelegate.h  TeamsView.cpp  TeamsView.h
src/: DatabaseException.h  DriverListModel.cpp  DriverListModel.h  DriverTableModel.cpp  DriverTableModel.h  MainWindow.h  main.cpp  qml.qrc
src/Controllers/: DriverController.cpp  DriverController.h  IController.h
src/Entities/: Driver.h  Mechanic.h  Person.h  Race.h  TeamManager.h  Track.h
src/Models/: DriverModel.cpp  DriverModel.h  IModel.h  MechanicModel.h  RaceModel.h  TrackModel.h
src/Views/: CustomTableWidget.h  DriverCartView.h  DriversListView.h
src/Views/Modals/: DriverModal.h
src/database/: DB.h  create_tables.sql
src/qml/: DriverTableDelegate.qml  TextWhite.qml  main.qml
